welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value booléan
var x=booléan=false ;
      ^BDRBuggle:4: error: not found: value baissebrosse
	baissebrosse();
        ^